# VapourSynth-removedirt

./: CMakeLists.txt  README.md
src/: DupBlocks.cpp  RemoveDirt.cpp  RemoveDirt.h  RemoveDirtAVS.cpp  RestoreMotionBlocks.cpp  SCSelect.cpp  shared.cpp  shared.h  utils.cpp
